fix(dashboard.scss): dashboard overlap

--- a/css/dashboard.scss
+++ b/css/dashboard.scss
@@ -67,7 +67,7 @@ $break_tablet: 1400px;
       width: calc(80% + 28px);
       margin: 0 auto;
       margin-bottom: -20px;
-      z-index: 1;
+      z-index: 0;
 
       & + .search_page {
          z-index: 2;
