--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1200,7 +1200,6 @@ th, td {}
 .tab_cadre_fixe {
    margin: 0px auto 5px auto;
    background: #FFF;
-   z-index: 1;
    text-align: left;
    font-size: 11px;
    max-width: 950px;
